[gd_scene load_steps=7 format=2]

[ext_resource path="res://Eunseo/Images/ButtonUnpressed.png" type="Texture" id=1]
[ext_resource path="res://Eunseo/Scenes/Password.gd" type="Script" id=2]
[ext_resource path="res://Eunseo/Fonts/Planes_ValMore.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Eunseo/Images/ButtonPressed.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="Password" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -161.0
margin_right = 175.0
margin_bottom = -85.0

[node name="Lock" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 374.0
margin_top = 53.0
margin_right = 604.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Lock"
align = 1

[node name="Key1Label" type="Label" parent="."]
margin_left = 355.0
margin_top = 150.0
margin_right = 394.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "_"

[node name="Key2Label" type="Label" parent="."]
margin_left = 446.0
margin_top = 150.0
margin_right = 485.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "_"

[node name="Key3Label" type="Label" parent="."]
margin_left = 542.0
margin_top = 150.0
margin_right = 581.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "_"

[node name="Key4Label" type="Label" parent="."]
margin_left = 634.0
margin_top = 150.0
margin_right = 673.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "_"

[node name="Button1" type="TextureButton" parent="."]
margin_left = 355.0
margin_top = 251.0
margin_right = 441.0
margin_bottom = 337.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num1" type="Label" parent="Button1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -18.0
margin_top = -62.0
margin_right = 22.0
margin_bottom = -11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Button2" type="TextureButton" parent="."]
margin_left = 456.0
margin_top = 251.0
margin_right = 542.0
margin_bottom = 337.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num2" type="Label" parent="Button2"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -28.976
margin_right = 22.0
margin_bottom = 42.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1

[node name="Button3" type="TextureButton" parent="."]
margin_left = 558.0
margin_top = 251.0
margin_right = 644.0
margin_bottom = 337.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num3" type="Label" parent="Button3"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -28.976
margin_right = 22.0
margin_bottom = 42.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1

[node name="Button4" type="TextureButton" parent="."]
margin_left = 355.0
margin_top = 343.0
margin_right = 441.0
margin_bottom = 429.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num4" type="Label" parent="Button4"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -26.976
margin_right = 22.0
margin_bottom = 44.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "4"
align = 1

[node name="Button5" type="TextureButton" parent="."]
margin_left = 456.0
margin_top = 343.0
margin_right = 542.0
margin_bottom = 429.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num5" type="Label" parent="Button5"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -26.976
margin_right = 22.0
margin_bottom = 44.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "5"
align = 1

[node name="Button6" type="TextureButton" parent="."]
margin_left = 558.0
margin_top = 343.0
margin_right = 644.0
margin_bottom = 429.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num6" type="Label" parent="Button6"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -26.976
margin_right = 22.0
margin_bottom = 44.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "6"
align = 1

[node name="Button7" type="TextureButton" parent="."]
margin_left = 355.0
margin_top = 432.0
margin_right = 441.0
margin_bottom = 518.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num7" type="Label" parent="Button7"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -26.976
margin_right = 22.0
margin_bottom = 44.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "7"
align = 1

[node name="Button8" type="TextureButton" parent="."]
margin_left = 456.0
margin_top = 432.0
margin_right = 542.0
margin_bottom = 518.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num8" type="Label" parent="Button8"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -15.0
margin_top = -26.976
margin_right = 25.0
margin_bottom = 44.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "8"
align = 1

[node name="Button9" type="TextureButton" parent="."]
margin_left = 558.0
margin_top = 432.0
margin_right = 644.0
margin_bottom = 518.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="num9" type="Label" parent="Button9"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -18.0
margin_top = -26.976
margin_right = 22.0
margin_bottom = 44.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "9"
align = 1

[node name="ButtonDel" type="TextureButton" parent="."]
margin_left = 667.0
margin_top = 288.0
margin_right = 753.0
margin_bottom = 374.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="del" type="Label" parent="ButtonDel"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -35.0
margin_top = -25.976
margin_right = 40.0
margin_bottom = 45.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Del"
align = 1

[node name="ButtonEnter" type="TextureButton" parent="."]
margin_left = 667.0
margin_top = 386.0
margin_right = 753.0
margin_bottom = 472.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="enter" type="Label" parent="ButtonEnter"]
anchor_left = 0.5
anchor_top = 0.616
anchor_right = 0.5
anchor_bottom = 0.616
margin_left = -43.0
margin_top = -24.976
margin_right = 53.0
margin_bottom = 46.024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Ent"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="ButtonDel" to="." method="_on_ButtonDel_pressed"]
[connection signal="pressed" from="ButtonEnter" to="." method="_on_ButtonEnter_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
